--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
     border-bottom: 2px solid #6415ff;
 }
 
-.nav__link::after {
+.nav__link:after {
     content: "";
     position: absolute;
     left: 0px;
@@ -158,6 +158,10 @@ body {
     background: #6415ff;
     transition: all 300ms;
     opacity: 0;
+}
+
+.nav__link:hover:after {
+    opacity: 1;
 }
 
 .nav__link--primary {
@@ -174,7 +178,7 @@ body {
 }
 
 .nav__link--primary:hover {
-    background: #7f48ed;
+    background-color: rgba(80,17,204);
     color: white;
 }
 
@@ -196,6 +200,10 @@ body {
   transition: all 300ms ease;
 }
 
+.btn:hover {
+    background-color: rgba(80,17,204);
+}
+
 .btn__menu {
     display: none;
     background: transparent;
@@ -207,11 +215,15 @@ body {
     color: #7f48ed;
 }
 
+.btn__menu--svg:hover {
+    filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
+}
+
+
 .btn__menu--close {
     position: absolute;
     top: 24px;
     right: 18px;
-
     padding: 8px;
     color: white;
 }
@@ -243,12 +255,44 @@ body {
     align-items: center;
 }
 
+.modal__link {
+    color: #1a202c;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 8px 0;
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
+}
+
+.modal__link:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .modal__link--primary {
     color: #f7fafc;
     padding: 12px 32px;
     background: #6415ff;
     border-radius: 500px;
     border: none;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 8px 0;
+    border-bottom: 2px solid transparent;
+}
+
+.modal__link--primary:hover {
+    cursor: pointer;
+    background-color: rgba(80,17,204);
+    transition: all 300ms;
+}
+
+.menu--open .modal {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
 }
 
 /* Header */
@@ -292,6 +336,10 @@ header .row {
     transition: border-color 300ms;
 }
 
+.header__email--input:hover {
+    border-color: rgba(160,174,192);
+}
+
 .header__email--btn {
     z-index: 2;
     margin: 8px;
@@ -308,6 +356,10 @@ header .row {
     top: 0;
     right: 0;
     padding: 14px;
+}
+
+.header__email--btn:hover {
+    background-color: rgba(60,13,153);
 }
 
 .header__customers--title {
@@ -735,6 +787,11 @@ header .row {
     transition: all 300ms ease;
 }
 
+.plan__button:hover {
+    transform: translate(1px, -1px);
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
 .plans__blob {
     z-index: -10;
     position: absolute;
@@ -895,6 +952,10 @@ header .row {
     transition: all 300ms ease;
 }
 
+.testimonial__button:hover {
+    background-color: rgba(226,232,240);
+}
+
 .testimonial__button svg {
     width: 16px;
     height: 16px;
@@ -983,10 +1044,19 @@ header .row {
     transition: all 300ms;
 }
 
+.start__button:hover:nth-child(1) {
+    background-color: rgba(229,62,62);
+}
+
 .start__button:nth-child(2) {
     border: 1px solid rgb(160, 174, 192);
     transition: all 300ms;
     background-color: #6415ff;
+}
+
+.start__button:hover:nth-child(2) {
+    background-color: rgba(247,250,252);
+    color: rgba(100,21,255);
 }
 
 /* Footer */
@@ -1043,7 +1113,7 @@ header .row {
     cursor: pointer;
 }
 
-.footer__column--link::after {
+.footer__column--link:after {
     content: "";
     position: absolute;
     left: 0px;
@@ -1053,6 +1123,10 @@ header .row {
     background: #fff;
     transition: all 300ms;
     opacity: 0;
+}
+
+.footer__column--link:hover:after {
+    opacity: 1;
 }
 
 .footer__column--link:nth-child(2) {
@@ -1112,6 +1186,10 @@ header .row {
     z-index: 2;
     cursor: pointer;
     transition: all 300ms;
+}
+
+.footer__social--link:hover {
+    background-color: rgba(203,213,224);
 }
 
 .footer__social--link svg {
